# scaling_flow

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml  test_data.ipynb
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: lint.yml  release.yaml  release.yml  test-slow.yaml  test.yaml
docs/: Makefile  api.md  conf.py  contributing.md  contributing.rst  developer.rst  index.rst  installation.rst  references.bib  references.rst  user.rst
docs/_static/css/: custom.css
docs/extensions/: typed_returns.py
docs/notebooks/: 100_pbmc.ipynb  200_zebrafish.ipynb  201_zebrafish_continuous.ipynb  300_ineuron_tutorial.ipynb  500_combosciplex.ipynb  600_trainsampler copy 2.ipynb  600_trainsampler copy.ipynb  600_trainsampler.ipynb  example.ipynb  index.rst  tahoe_sizes.ipynb
docs/user/: datasets.rst  external.rst  index.rst  metrics.rst  model.rst  networks.rst  plotting.rst  preprocessing.rst  solvers.rst  training.rst  utils.rst
scripts/: create_tahoe.py  process_tahoe.py  process_tahoe.sbatch
src/cellflow/: __init__.py  _constants.py  _optional.py  datasets.py  utils.py
src/cellflow/compat/: torch_.py
src/cellflow/data/: __init__.py  _data.py  _dataloader.py  _datamanager.py  _jax_dataloader.py  _torch_dataloader.py  _utils.py
src/cellflow/metrics/: __init__.py  _metrics.py
src/cellflow/model/: __init__.py  _cellflow.py  _utils.py
src/cellflow/networks/: __init__.py  _prophet_adapter.py  _set_encoders.py  _utils.py  _velocity_field.py
src/cellflow/plotting/: __init__.py  _plotting.py  _utils.py
src/cellflow/preprocessing/: __init__.py  _gene_emb.py  _pca.py  _preprocessing.py  _wknn.py
src/cellflow/solvers/: __init__.py  _genot.py  _otfm.py  utils.py
src/cellflow/training/: __init__.py  _callbacks.py  _trainer.py
src/cfp/: __init__.py  _constants.py  _types.py  datasets.py  utils.py
src/cfp/data/: __init__.py  _data.py  _dataloader.py  _datamanager.py  _utils.py  data.py  dataloader.py  datamanager.py  utils.py
src/cfp/metrics/: __init__.py  _metrics.py  metrics.py
src/cfp/model/: __init__.py  _cellflow.py  _utils.py  cellflow.py  genot.py  otfm.py
src/cfp/models/: __init__.py  cellflow.py
src/cfp/networks/: __init__.py  _modules.py  _set_encoders.py  _velocity_field.py  modules.py  nets.py  set_encoders.py  velocity_field.py
src/cfp/plotting/: __init__.py  _plotting.py  _utils.py
src/cfp/preprocessing/: __init__.py  _gene_emb.py  _pca.py  _preprocessing.py  _wknn.py
src/cfp/solvers/: __init__.py  _genot.py  _otfm.py  genot.py  otfm.py
src/cfp/training/: __init__.py  _callbacks.py  _trainer.py  callbacks.py  trainer.py
src/scaleflow/: __init__.py  _constants.py  _optional.py  datasets.py  utils.py
src/scaleflow/compat/: __init__.py  torch_.py
src/scaleflow/data/: __init__.py  _data.py  _data_splitter.py  _dataloader.py  _datamanager.py  _jax_dataloader.py  _torch_dataloader.py  _utils.py
src/scaleflow/metrics/: __init__.py  _metrics.py
src/scaleflow/model/: __init__.py  _scaleflow.py  _utils.py
src/scaleflow/networks/: __init__.py  _set_encoders.py  _utils.py  _velocity_field.py
src/scaleflow/plotting/: __init__.py  _plotting.py  _utils.py
src/scaleflow/preprocessing/: __init__.py  _gene_emb.py  _pca.py  _preprocessing.py  _wknn.py
src/scaleflow/solvers/: __init__.py  _eqm.py  _genot.py  _otfm.py
src/scaleflow/training/: __init__.py  _callbacks.py  _trainer.py
tests/: conftest.py  test_basic.py  test_modules.py  test_optional.py
tests/compat/: test_torch_.py
tests/data/: test_cfsampler.py  test_datamanager.py  test_dataset.py  test_datasplitter.py  test_jax_dataloader.py  test_old_get_condition_data.py  test_torch_dataloader.py
tests/metrics/: test_metrics.py
tests/model/: test_cellflow.py  test_scaleflow.py
tests/networks/: test_aggregators.py  test_condencoder.py  test_velocityfield.py
tests/plotting/: conftest.py  test_plotting.py
tests/preprocessing/: test_gene_emb.py  test_pca.py  test_preprocessing.py  test_wknn.py
tests/solver/: test_solver.py
tests/test_artifacts/: ENSG00000169047_emb.pt  ENSG00000171105_emb.pt  ENSG00000198793_emb.pt
tests/trainer/: test_callbacks.py  test_trainer.py
tmp/: clean_name_gene.ipynb  data_perturb.ipynb  script_extract_satijasv2.sh
